# par3D

./: CMakeLists.txt  Main.qml  README.md  main.cpp  par3DView.qml  serialreceiver.cpp  serialreceiver.h
